Fix form fields box shadow on mobile

--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -25,6 +25,8 @@
   background-color: white;
   padding: 14px 16px;
   border-radius: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
@@ -38,6 +40,8 @@
   justify-content: center;
   padding: 14px 16px;
   border-radius: 5px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -78,6 +82,8 @@
 }
 
 .field input:focus-visible {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   box-shadow: 0 0 0 1pt black;
 }
 
@@ -98,6 +104,8 @@
 }
 
 .field_with_errors input:focus-visible {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   box-shadow: 0 0 0 1px red;
   outline: none;
 }
