--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -161,6 +161,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 5px;
   color: black;
